<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="inCallLabel" translate="false">InCallUI</string>
    <string name="onHold">On hold</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">You can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
    <string name="callUnanswered_forwarded">Call Unanswered and Forwarded</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">Modify Call request failed\n</string>
    <string name="modify_call_option_title">Which type of call?</string>
    <string name="modify_call_option_vt">VT</string>
    <string name="modify_call_option_vt_tx">Video transmit</string>
    <string name="modify_call_option_vt_rx">Video receive</string>
    <string name="modify_call_option_voice">Voice Only</string>
    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
    <string name="upgrade_vt_prompt">Would you like to upgrade the call to video call?</string>
    <string name="upgrade_vt_tx_prompt">Would you like to upgrade the call to video transmit only call?</string>
    <string name="upgrade_vt_rx_prompt">Would you like to upgrade the call to video receive only call?</string>
    <string name="vt_init_fail_str">VT initialization failed. Downgrading call to VoLTE\n</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="stk_cc_ss_to_dial_error">SS request modified to DIAL request.</string>
    <string name="stk_cc_ss_to_ussd_error">SS request modified to USSD request.</string>
    <string name="stk_cc_ss_to_ss_error">SS request modified to new SS request.</string>
    <string name="fdn_check_failure">Your Phone app\'s Fixed Dialing Numbers setting is turned on. As a result, some call-related features aren\'t working.</string>
    <string name="radio_off_error">Turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string-array name="clir_display_values">
        
        <item>Network default</item>
        
        <item>Hide number</item>
        
        <item>Show number</item>
    </string-array>
    <string-array name="clir_values" translatable="false">
        
        <item><xliff:g>DEFAULT</xliff:g></item>
        
        <item><xliff:g>HIDE</xliff:g></item>
        
        <item><xliff:g>SHOW</xliff:g></item>
    </string-array>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">Couldn\'t change the voicemail number.\nContact your carrier if this problem persists.</string>
    <string name="fw_change_failed">Couldn\'t change the forwarding number.\nContact your carrier if this problem persists.</string>
    <string name="fw_get_in_vm_failed">Couldn\'t retrieve and save current forwarding number settings.\nSwitch to the new provider anyway?</string>
    <string name="no_change">No changes were made.</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="voicemail_default">My carrier</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="label_available">Available networks</string>
    <string name="load_networks_progress">Searching\u2026</string>
    <string name="empty_networks_list">No networks found.</string>
    <string name="search_networks">Search networks</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="register_on_network">Registering on <xliff:g id="network">%s</xliff:g>\u2026</string>
    <string name="not_allowed">Your SIM card doesn\'t allow a connection to this network.</string>
    <string name="connect_later">Can\'t connect to this network right now. Try again later.</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
</resources>